# Dynamic-Application

./: CMakeLists.txt  README.md
Application/: CMakeLists.txt  main.cpp
Interface/: CMakeLists.txt  common.hpp  plugin.cpp  plugin.hpp  plugininterface.cpp  plugininterface.hpp  pluginmanager.cpp  pluginmanager.hpp
Plugins/PluginOne/: CMakeLists.txt  interface.cpp  pluginone.cpp  pluginone.hpp
Plugins/PluginTwo/: CMakeLists.txt  interface.cpp  interface.hpp  pluginone.cpp  pluginone.hpp  plugintwo.cpp  plugintwo.hpp
